--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: generic
-sudo: required
 os:
 - linux
 env:
@@ -7,15 +6,10 @@ env:
   - DEVKITARM=$HOME/devkitARM
 addons:
   apt:
-    sources:
-    - ubuntu-toolchain-r-test
     packages:
-    - g++-6-multilib
-    - gcc-6-multilib
+    - gcc-multilib
     - linux-libc-dev
 install:
-- sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 60 --slave /usr/bin/g++ g++ /usr/bin/g++-6
-- sudo ln -s /usr/include/asm-generic /usr/include/asm
 - cd $HOME
 - travis_retry wget http://download.sourceforge.net/devkitpro/devkitARM_r46-x86_64-linux.tar.bz2
 - tar xvf devkitARM*.tar.bz2
