--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: generic
 os:
 - linux
+dist: trusty
 env:
   global:
   - DEVKITARM=$HOME/devkitARM
@@ -18,6 +19,7 @@ install:
 script:
 - cd $TRAVIS_BUILD_DIR
 - travis_retry wget -q $BASEROM_URL -O baserom.gba
+- gcc --version
 - ./build_tools.sh
 - make tidy && make -j2 compare_ruby
 - make tidy && make -j2 compare_ruby_rev1
