--- a/tools/aif2pcm/Makefile
+++ b/tools/aif2pcm/Makefile
@@ -2,6 +2,8 @@ CC = gcc
 
 CFLAGS = -Wall -Wextra -Wno-switch -std=c11 -O2
 
+LDFLAGS = -s -static
+
 LIBS = -lm
 
 SRCS = main.c extended.c
@@ -9,7 +11,7 @@ SRCS = main.c extended.c
 .PHONY: clean
 
 aif2pcm: $(SRCS)
-	$(CC) $(CFLAGS) $(SRCS) -o $@ $(LIBS)
+	$(CC) $(CFLAGS) $(SRCS) -o $@ $(LDFLAGS) $(LIBS)
 
 clean:
 	$(RM) aif2pcm aif2pcm.exe
