--- a/tools/bin2c/Makefile
+++ b/tools/bin2c/Makefile
@@ -2,12 +2,14 @@ CC = gcc
 
 CFLAGS = -Wall -Wextra -std=c11 -O2
 
+LDFLAGS = -s -static
+
 .PHONY: clean
 
 SRCS = bin2c.c
 
 bin2c: $(SRCS)
-	$(CC) $(CFLAGS) $(SRCS) -o $@
+	$(CC) $(CFLAGS) $(SRCS) -o $@ $(LDFLAGS)
 
 clean:
 	$(RM) bin2c bin2c.exe
