--- a/tools/ramscrgen/Makefile
+++ b/tools/ramscrgen/Makefile
@@ -2,6 +2,8 @@ CXX := g++
 
 CXXFLAGS := -std=c++11 -O2 -Wall -Wno-switch
 
+LDFLAGS := -s -static
+
 SRCS := main.cpp sym_file.cpp elf.cpp
 
 HEADERS := ramscrgen.h sym_file.h elf.h char_util.h
@@ -9,7 +11,7 @@ HEADERS := ramscrgen.h sym_file.h elf.h char_util.h
 .PHONY: clean
 
 ramscrgen: $(SRCS) $(HEADERS)
-	$(CXX) $(CXXFLAGS) $(SRCS) -o $@
+	$(CXX) $(CXXFLAGS) $(SRCS) -o $@ $(LDFLAGS)
 
 clean:
 	$(RM) ramscrgen ramscrgen.exe
