--- a/tools/rsfont/Makefile
+++ b/tools/rsfont/Makefile
@@ -2,6 +2,8 @@ CC = gcc
 
 CFLAGS = -Wall -Wextra -std=c11 -O2 -DPNG_SKIP_SETJMP_CHECK
 
+LDFLAGS = -s -static
+
 LIBS = -lpng -lz
 
 SRCS = main.c convert_png.c util.c font.c
@@ -9,7 +11,7 @@ SRCS = main.c convert_png.c util.c font.c
 .PHONY: clean
 
 rsfont: $(SRCS) convert_png.h gfx.h global.h util.h font.h
-	$(CC) $(CFLAGS) $(SRCS) -o $@ $(LIBS)
+	$(CC) $(CFLAGS) $(SRCS) -o $@ $(LDFLAGS) $(LIBS)
 
 clean:
 	$(RM) rsfont rsfont.exe
