--- a/tools/scaninc/Makefile
+++ b/tools/scaninc/Makefile
@@ -2,6 +2,8 @@ CXX = g++
 
 CXXFLAGS = -Wall -std=c++11 -O2
 
+LDFLAGS = -s -static
+
 SRCS = scaninc.cpp c_file.cpp asm_file.cpp
 
 HEADERS := scaninc.h asm_file.h c_file.h
@@ -9,7 +11,7 @@ HEADERS := scaninc.h asm_file.h c_file.h
 .PHONY: clean
 
 scaninc: $(SRCS) $(HEADERS)
-	$(CXX) $(CXXFLAGS) $(SRCS) -o $@
+	$(CXX) $(CXXFLAGS) $(SRCS) -o $@ $(LDFLAGS)
 
 clean:
 	$(RM) scaninc scaninc.exe
